# graphscout

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
integrations/claude-code/: codegraph-touch.sh  graphscout-touch.sh  settings-snippet.json
scripts/: benchmark.py  lang_coverage.py
src/codegraph_kit/: __init__.py  cli.py  core.py  mcp_server.py
src/graphscout/: __init__.py  agents.py  analysis.py  cli.py  core.py  daemon.py  diffing.py  doctor.py  jsonout.py  mcp_server.py  queries.py  routes.py
tests/: test_codegraph.py  test_graphscout.py
