[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphscout"
version = "0.6.1"
description = "Cached, incremental code-graph maps so AI agents query code structure instead of reading whole files. `explore` returns verbatim source + call edges + blast radius in one call; plus FTS5 search, multi-hop impact analysis, import-based affected-tests, symbol-level git diff, dead-code and API-route detection (17 framework families), churn x connectivity hotspots, complexity metrics (fan-in/fan-out), duplicate-body detection, recent-change tracking, shortest call paths, token-cost estimates, module dependency viz, and .gitignore-aware indexing with exclude/include config. CLI + MCP server + JSON output, wires into Claude Code, Codex, Gemini CLI, Cursor, and Windsurf. Background watch daemon."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Duc Nguyen" }]
keywords = ["ai-agents", "code-graph", "tree-sitter", "claude-code", "mcp", "token-efficiency", "codebase-map", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "graphifyy>=0.9",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
watch = ["watchdog>=4.0"]
dev = ["pytest>=8", "build", "twine"]

[project.scripts]
graphscout = "graphscout.cli:main"

[project.urls]
Homepage = "https://github.com/nguyenminhduc9988/graphscout"
Repository = "https://github.com/nguyenminhduc9988/graphscout"
Issues = "https://github.com/nguyenminhduc9988/graphscout/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphscout"]
